fix: use row-gap instead of already removed margin

--- a/components/Search/search.module.scss
+++ b/components/Search/search.module.scss
@@ -5,6 +5,7 @@ $SEARCH-PADDING-BOTTOM: 49px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    row-gap: 33px;
     width: 100%;
 
 }
